ruining the color naming theme by fixing color contrasts

--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ h1, p{
     direction:rtl;
     text-align:justify;
     padding: 7.5vw 5vw 7.5vw 0;
-    background-color: #FF3C38;
+    background-color: #c10c09;
 } .three h1{
     font-family: 'Readex Pro', sans-serif;
     font-size: 3vw;
@@ -95,7 +95,7 @@ h1, p{
     color: white;
     text-align: justify;
     padding: 7.5vw 0 7.5vw 5vw;
-    background-color: #6C8EAD;
+    background-color: #507395;
 } .five h1{
     font-family: 'Sigmar One', cursive;
     font-size: 3vw;
